# aquarium-butterflyfish

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  coverage.yml  memcheck.yml
cmake/: FetchAquariumSeaTurtle.cmake  FetchAquariumSeaUrchin.cmake  FetchAquariumTriggerfish.cmake
doc/: Collections.md  Conventions.md  FixedLists.md  Lists.md  Maps.md  OrderedMaps.md  OrderedSets.md  Queues.md  ReducibleLists.md  ReducibleQueues.md  ReducibleStacks.md  Sets.md  SortedMaps.md  SortedSets.md  Stacks.md  Streams.md
include/: butterflyfish.h
include/butterflyfish/: collection_i.h  collection_i_i.h  collection_ni.h  collection_ni_ni.h  collection_p.h  collection_p_p.h  collection_s.h  collection_s_s.h  collection_sr.h  collection_sr_sr.h  collection_wr.h  fixed_list_i.h  fixed_list_ni.h  fixed_list_p.h  fixed_list_s.h  fixed_list_sr.h  fixed_list_wr.h  list_i.h  list_ni.h  list_p.h  list_s.h  list_sr.h  list_wr.h  map_entry_i_i.h  map_entry_ni_ni.h  map_entry_p_p.h  map_entry_s_s.h  map_entry_sr_sr.h  map_i_i.h  map_ni_ni.h  map_p_p.h  map_s_s.h  map_sr_sr.h  ordered_map_i_i.h  ordered_map_ni_ni.h  ordered_map_p_p.h  ordered_map_s_s.h  ordered_map_sr_sr.h  ordered_set_i.h  ordered_set_ni.h  (+59 more)
src/: collection_i.c  collection_i_i.c  collection_ni.c  collection_ni_ni.c  collection_p.c  collection_p_p.c  collection_s.c  collection_s_s.c  collection_sr.c  collection_sr_sr.c  collection_wr.c  fixed_list_i.c  fixed_list_ni.c  fixed_list_p.c  fixed_list_s.c  fixed_list_sr.c  fixed_list_wr.c  list_i.c  list_ni.c  list_p.c  list_s.c  list_sr.c  list_wr.c  map_i_i.c  map_ni_ni.c  map_p_p.c  map_s_s.c  map_sr_sr.c  ordered_map_i_i.c  ordered_map_ni_ni.c  ordered_map_p_p.c  ordered_map_s_s.c  ordered_map_sr_sr.c  ordered_set_i.c  ordered_set_ni.c  ordered_set_p.c  ordered_set_s.c  ordered_set_sr.c  queue_i.c  queue_ni.c  (+54 more)
test/: test_butterflyfish.c  test_collection_i.c  test_collection_i_i.c  test_collection_ni.c  test_collection_ni_ni.c  test_collection_p.c  test_collection_p_p.c  test_collection_s.c  test_collection_s_s.c  test_collection_sr.c  test_collection_sr_sr.c  test_collection_wr.c  test_fixed_list_i.c  test_fixed_list_ni.c  test_fixed_list_p.c  test_fixed_list_s.c  test_fixed_list_sr.c  test_fixed_list_wr.c  test_list_i.c  test_list_ni.c  test_list_p.c  test_list_s.c  test_list_sr.c  test_list_wr.c  test_map_entry_i_i.c  test_map_i_i.c  test_map_ni_ni.c  test_map_p_p.c  test_map_s_s.c  test_map_sr_sr.c  test_ordered_map_i_i.c  test_ordered_map_ni_ni.c  test_ordered_map_p_p.c  test_ordered_map_s_s.c  test_ordered_map_sr_sr.c  test_ordered_set_i.c  test_ordered_set_ni.c  test_ordered_set_p.c  test_ordered_set_s.c  test_ordered_set_sr.c  (+56 more)
